[package]
name = "trash_the_tower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1", features = ["dynamic"] }
bevy_prototype_lyon = "0.6.0"
bevy_rapier2d = "0.16.2"
iyes_loopless = "0.7.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
